# PatchPilot

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: run_baseline.py  run_eval.sh  score.py  validate_gold.sh
src/patchpilot/: __init__.py  config.py  dataset.py  edit.py  model_client.py  oracle.py  pipeline.py  predictions.py  prompts.py  repos.py
