[project]
name = "patchpilot"
version = "0.1.0"
description = "An autonomous SWE-bench agent. Phases 0-1: eval harness + dumb oracle baseline."
requires-python = ">=3.11"
dependencies = [
    "swebench>=4.0.0",
    "datasets>=2.19.0",
    "anthropic>=0.40.0",
    "unidiff>=0.7.5",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patchpilot"]

[tool.hatch.metadata]
allow-direct-references = true
